--- a/index.html
+++ b/index.html
@@ -11,8 +11,42 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
+    <script
+      src="https://kit.fontawesome.com/6bbc3537db.js"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      window.FontAwesomeConfig = {
+        searchPseudoElements: true,
+      };
+    </script>
   </head>
-  <body>
+  <body class="debugg">
+    <!-- FIRST SECTION -->
+    <section class="container-fluid first-section">
+      <div class="row d-flex flex-column">
+        <aside class="col-auto aside d-flex py-2 px-0">
+          <!-- LOGO -->
+          <div
+            class="col-auto aside-section d-flex jusify-content-center align-items-center px-3"
+          >
+            <figure class="logo mb-0">
+              <img src="./img/mobile-logo.png" alt="" />
+            </figure>
+          </div>
+          <!-- SEARCH BAR -->
+          <div class="col aside-section search"></div>
+          <!-- BELL -->
+          <div
+            class="col-auto aside-section bell d-flex jusify-content-center align-items-center px-3"
+          >
+            <i class="fa-solid fa-bell"></i>
+          </div>
+        </aside>
+        <main class="col main flex-grow-1"></main>
+      </div>
+    </section>
+
     <!-- BOOTSTRAP JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
