New Feature: Badges

--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
               </div>
               <div class="boolean-plan order-md-3">
                 <span class="status-title">Boolean</span>
-                <span>Piano blaze</span>
-                <div>3 app >> +</div>
+                <span class="badge">Piano blaze</span>
+                <div>
+                  <span class="badge">3 app</span> >>
+                  <span class="badge">+</span>
+                </div>
               </div>
               <div class="online-students order-md-2 py-2">
                 <div class="student-30">
