New Feature: OFFCANVAS FORM

--- a/index.html
+++ b/index.html
@@ -166,6 +166,168 @@
                   </div>
                   <div class="offcanvas-body">
                     <!-- OFFCANVAS FORM -->
+                    <form action="">
+                      <div class="container-fluid">
+                        <div class="row">
+                          <div class="col-6">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Nome</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="exampleInputPassword1"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Cognome</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="exampleInputPassword1"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Email</label
+                              >
+                              <input
+                                type="email"
+                                class="form-control"
+                                id="exampleInputPassword1"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Password</label
+                              >
+                              <input
+                                type="password"
+                                class="form-control"
+                                id="exampleInputPassword1"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-12">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Indirizzo</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="exampleInputPassword1"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Città</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="exampleInputPassword1"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-4 d-flex flex-column">
+                            <label
+                              for="exampleInputPassword1"
+                              class="form-label"
+                              >Stato</label
+                            >
+                            <select
+                              id="stateSelect"
+                              onchange="stateSelected();"
+                              class="form-control"
+                            >
+                              <option value="" selected="selected">
+                                Scegli...
+                              </option>
+                              <option value="italia">Italia</option>
+                              <option value="svizzera">Svizzera</option>
+                              <option value="giappone">Giappone</option>
+                            </select>
+                          </div>
+                          <div class="col-2">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Cap</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="exampleInputPassword1"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-12">
+                            <div class="mb-3">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label"
+                                >Foto</label
+                              >
+                              <input
+                                alt="Scegli file"
+                                type="file"
+                                class="form-control"
+                                id="exampleInputImage"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-12">
+                            <div class="form-check">
+                              <input
+                                class="form-check-input"
+                                type="checkbox"
+                                id="disabledFieldsetCheck"
+                                disabled
+                              />
+                              <label
+                                class="form-check-label"
+                                for="disabledFieldsetCheck"
+                              >
+                                Seleziona per proseguire
+                              </label>
+                            </div>
+                          </div>
+                          <div class="col d-flex gap-2 mt-3">
+                            <button type="submit" class="btn btn-primary">
+                              Salva
+                            </button>
+                            <button type="reset" class="btn reset btn-primary">
+                              Svuota
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
                   </div>
                 </div>
               </div>
