--- a/index.html
+++ b/index.html
@@ -440,12 +440,12 @@
                   </div>
                   <!-- SECOND COLUMN
                -->
-                  <div class="col-12 col-lg-4">
+                  <div class="col-12 col-lg-4 d-flex flex-column gap-4">
                     <!-- CARD -->
                     <div class="card todo" style="width: 100%">
-                      <div class="card-header">TODO</div>
+                      <div class="card-header">Todo</div>
                       <!-- TODO LIST -->
-                      <div class="list-group">
+                      <div class="list-group p-3">
                         <label class="list-group-item">
                           <input
                             class="form-check-input me-1"
@@ -470,6 +470,27 @@
                           />
                           Controllare username github studenti
                         </label>
+                      </div>
+                    </div>
+                    <!-- CARD -->
+                    <div class="card todo p-3" style="width: 100%">
+                      <!-- TODO LIST -->
+                      <div class="card active-users" style="width: 100%;">
+                        <div class="card-body  p-3">
+                          <img src="./img/stats.jpeg" class="card-img-top" alt="...">
+                          <h5 class="card-title">Utenti attivi</h5>
+                          <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">Gennaio: 1200</li>
+                          <li class="list-group-item">Febbraio: 800</li>
+                          <li class="list-group-item">Marzo: 1500</li>
+                        </ul>
+                        <div class="card-body">
+                          <a href="#" class="card-link users">Visualizza report approfondito</a>
+                        </div>
+                      </div>
+                    </div>
                       </div>
                     </div>
                   </div>
