--- a/index.html
+++ b/index.html
@@ -355,6 +355,133 @@
                     <!-- CARD -->
                     <div class="card" style="width: 100%">
                       <div class="card-header">Prossime Classi</div>
+                      <!-- TABLE -->
+                      <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th class='w-50' scope="col">Nome</th>
+                            <th scope="col" class='start-date'>Data inizio</th>
+                            <th scope="col">ROI</th>
+                            <th scope="col">Stato</th>
+                            <th scope="col">Azioni</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 75</th>
+                            <td>15 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge success">Done</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 76</th>
+                            <td>16 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge success">Done</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 77</th>
+                            <td>17 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge wait">Process</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 78</th>
+                            <td>18 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge success">Done</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 79</th>
+                            <td>19 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge failed">Failed</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 80</th>
+                            <td>20 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge success">Done</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 81</th>
+                            <td>21 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge failed">Failed</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><span class='avatar'><img src="./img/class-avatar.jpg" alt=""></span>Classe 82</th>
+                            <td>22 Feb 2021</td>
+                            <td>20%</td>
+                            <td><span class="badge success">Done</span></td>
+                            <td class='d-flex flex-nowrap gap-2' >
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-pencil"></i>
+                              </span>
+                              <span class='table-icon'>
+                                <i class="fa-solid fa-trash"></i>
+                              </span>
+                            </td>
+                          </tr>
+                         
+                        </tbody>
+                      </table>
                     </div>
                     <!-- CARD -->
                     <div class="card" style="width: 100%">
