--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
         </aside>
         <!-- MAIN -->
-        <main class="col main d-flex flex-grow-1 p-0">
+        <main class="main d-flex flex-grow-1 p-0">
           <!-- MAIN HEADER -->
           <header class="main-header d-flex flex-column text-center py-4 px-2">
             <nav class="header-nav">
@@ -193,69 +193,69 @@
                               <input
                                 type="text"
                                 class="form-control"
-                                id="exampleInputPassword1"
+                                id="exampleInputPassword2"
                               />
                             </div>
                           </div>
                           <div class="col-6">
                             <div class="mb-3">
                               <label
-                                for="exampleInputPassword1"
+                                for="exampleInputPassword2"
                                 class="form-label"
                                 >Email</label
                               >
                               <input
                                 type="email"
                                 class="form-control"
-                                id="exampleInputPassword1"
+                                id="exampleInputPassword2"
                               />
                             </div>
                           </div>
                           <div class="col-6">
                             <div class="mb-3">
                               <label
-                                for="exampleInputPassword1"
+                                for="exampleInputPassword3"
                                 class="form-label"
                                 >Password</label
                               >
                               <input
                                 type="password"
                                 class="form-control"
-                                id="exampleInputPassword1"
+                                id="exampleInputPassword3"
                               />
                             </div>
                           </div>
                           <div class="col-12">
                             <div class="mb-3">
                               <label
-                                for="exampleInputPassword1"
+                                for="exampleInputPassword4"
                                 class="form-label"
                                 >Indirizzo</label
                               >
                               <input
                                 type="text"
                                 class="form-control"
-                                id="exampleInputPassword1"
+                                id="exampleInputPassword4"
                               />
                             </div>
                           </div>
                           <div class="col-6">
                             <div class="mb-3">
                               <label
-                                for="exampleInputPassword1"
+                                for="exampleInputPassword5"
                                 class="form-label"
                                 >Città</label
                               >
                               <input
                                 type="text"
                                 class="form-control"
-                                id="exampleInputPassword1"
+                                id="exampleInputPassword5"
                               />
                             </div>
                           </div>
                           <div class="col-4 d-flex flex-column">
                             <label
-                              for="exampleInputPassword1"
+                              for="exampleInputPassword6"
                               class="form-label"
                               >Stato</label
                             >
@@ -275,26 +275,25 @@
                           <div class="col-2">
                             <div class="mb-3">
                               <label
-                                for="exampleInputPassword1"
+                                for="exampleInputPassword7"
                                 class="form-label"
                                 >Cap</label
                               >
                               <input
                                 type="text"
                                 class="form-control"
-                                id="exampleInputPassword1"
+                                id="exampleInputPassword7"
                               />
                             </div>
                           </div>
                           <div class="col-12">
                             <div class="mb-3">
                               <label
-                                for="exampleInputPassword1"
+                                for="exampleInputPassword8"
                                 class="form-label"
                                 >Foto</label
                               >
                               <input
-                                alt="Scegli file"
                                 type="file"
                                 class="form-control"
                                 id="exampleInputImage"
